--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.valencia.cerostockbeta">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +15,7 @@
         <activity
             android:name=".MainActivity"
             android:label="YourAppName"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +23,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".VendedorMain" />
-        <activity android:name=".CompradorMain"></activity>
+        <activity android:name=".CompradorMain" />
+        <activity android:name=".DetallesProd" />
+        <activity android:name=".VendedorPub"></activity>
+
     </application>
 
 </manifest>
